--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,20 +1,26 @@
-# Étape 1 : build image de base
+# Étape 1 : image de base
 FROM node:20.17-slim
 
-# Crée le répertoire de travail dans le conteneur
+# Dossier de travail dans le conteneur
 WORKDIR /app
 
-# Copie les fichiers package.json et lock pour installer les deps en cache
+# Copie package.json / lock en premier (meilleure gestion du cache)
 COPY ../api/package*.json ./
 
-# Installation des dépendances
+# Install des dépendances
 RUN npm install
+
+# Installe OpenSSL (pour Prisma)
+RUN apt-get update -y && apt-get install -y openssl
 
 # Copie le reste du code source
 COPY ../api .
 
-# Expose le port d'Apollo Server (par défaut 4000)
+# Génère Prisma (maintenant que le schema est là)
+RUN npx prisma generate --schema=src/prisma/schema.prisma
+
+# Port exposé
 EXPOSE 4000
 
-# Commande pour lancer le serveur GraphQL
+# Commande de démarrage
 CMD ["npx", "ts-node", "app.ts"]
