--- a/api/package.json
+++ b/api/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "apollo-server": "^3.13.0",
+    "argon2": "^0.41.1",
     "graphql": "^16.10.0"
   },
   "devDependencies": {
+    "@types/argon2": "^0.14.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.13",
     "prisma": "^6.5.0",
     "ts-node": "^10.9.2",
