--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
     "@prisma/client": "^6.5.0",
     "apollo-server": "^3.13.0",
     "argon2": "^0.41.1",
-    "graphql": "^16.10.0"
+    "graphql": "^16.10.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/argon2": "^0.14.1",
