--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.5.0",
     "apollo-server": "^3.13.0",
     "argon2": "^0.41.1",
+    "axios": "^1.8.4",
     "graphql": "^16.10.0",
     "jsonwebtoken": "^9.0.2"
   },
