--- a/api/package.json
+++ b/api/package.json
@@ -14,8 +14,10 @@
     "apollo-server": "^3.13.0",
     "argon2": "^0.41.1",
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "graphql": "^16.10.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.0.5"
   },
   "devDependencies": {
     "@types/argon2": "^0.14.1",
