commande inutile mais bon

--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.13",
+    "dotenv-cli": "^8.0.0",
     "prisma": "^6.8.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
