--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "4000:4000"
     env_file:
       - .env
-    command: ["npx", "ts-node", "app.ts"]
+    command: ["sh", "entrypoint.sh"]
     networks:
       - routing
       - default
