--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.5.0",
     "graphql": "^16.10.0",
     "jsonwebtoken": "^9.0.2",
-    "node-cron": "^4.0.5"
+    "node-cron": "^4.0.5",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "@types/argon2": "^0.14.1",
