--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     working_dir: /home/node/app/api
     ports:
       - "4000:4000"
+      - "9100:9100"  
     env_file:
       - .env
     command: ["sh", "entrypoint.sh"]
@@ -22,6 +23,31 @@ services:
       - 'traefik.http.routers.f1-api.rule=Host(`blue-api.devprod.fr`)'
       - 'traefik.http.routers.f1-api.entrypoints=websecure'
       - 'traefik.http.routers.f1-api.tls.certresolver=myresolver'
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - default
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana-storage:/var/lib/grafana
+    networks:
+      - default
+
+volumes:
+  grafana-storage:
 
 networks:
   routing:
